<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.arcgbot.viewmodels.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.LoginActivity">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="160dp"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/title_welcome"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"></View>

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/text_black"
                android:text="@={viewmodel.usernameMutableLiveData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@={viewmodel.passwordMutableLiveData}"
                android:textColor="@color/text_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/forgot_password"
                android:textColor="@color/holo_red_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <Button
                android:id="@+id/btLogin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/holo_red_dark"
                android:onClick="@{() -> viewmodel.loginAction()}"
                android:text="@string/title_bt_login"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/arcade_tech_title"
                android:textColor="@color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/title_welcome2"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/press_start_2p"
                android:text="@string/title_welcome3"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/title_username"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="174dp"
                android:indeterminateTint="@color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@{`V. `+viewmodel.appVersion}"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="V.2.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/error_bottom_sheet"
            layout="@layout/error_bottom_sheet"
            app:loginviewmodel="@{viewmodel}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>